--- a/metadata-models-custom/registry/entity-registry.yaml
+++ b/metadata-models-custom/registry/entity-registry.yaml
@@ -1,42 +1,5 @@
-id: mycompany-dq-model
+id: exact-science-metadata-model
 entities:
-  - name: dataset
+  - name: dataProduct
     aspects:
-      - customDataQualityRules
-      - customDataQualityRuleEvent
-  - name: container
-    aspects:
-      - customDataQualityRules
-plugins:
-  aspectPayloadValidators:
-    - className: 'com.linkedin.metadata.aspect.plugins.validation.CustomDataQualityRulesValidator'
-      enabled: true
-      supportedOperations:
-        - UPSERT
-      supportedEntityAspectNames:
-        - entityName: 'dataset'
-          aspectName: customDataQualityRules
-  mutationHooks:
-    - className: 'com.linkedin.metadata.aspect.plugins.hooks.CustomDataQualityRulesMutator'
-      enabled: true
-      supportedOperations:
-        - UPSERT
-      supportedEntityAspectNames:
-        - entityName: 'dataset'
-          aspectName: customDataQualityRules
-  mclSideEffects:
-    - className: 'com.linkedin.metadata.aspect.plugins.hooks.CustomDataQualityRulesMCLSideEffect'
-      enabled: true
-      supportedOperations:
-        - UPSERT
-      supportedEntityAspectNames:
-        - entityName: 'dataset'
-          aspectName: customDataQualityRules
-  mcpSideEffects:
-    - className: 'com.linkedin.metadata.aspect.plugins.hooks.CustomDataQualityRulesMCPSideEffect'
-      enabled: true
-      supportedOperations:
-        - UPSERT
-      supportedEntityAspectNames:
-        - entityName: 'dataset'
-          aspectName: customDataQualityRules
+      - esDataProductSchema
